--- a/Common-Loging/pom.xml
+++ b/Common-Loging/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.csl.commonloging</groupId>
-    <artifactId>Common-Loging</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>csl-common-loging</artifactId>
+    <version>1.0-RELEASE</version>
     <packaging>jar</packaging>
 
-    <name>CSL-Common-Loging</name>
-    <url>http://maven.apache.org</url>
+    <name>cls-common-loging</name>
+    <url>http://ciptasrigatilestari.co.id</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -54,7 +54,7 @@
             </exclusions>
         </dependency>
     </dependencies>
-    <build>
+<!--    <build>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -83,5 +83,5 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 </project>
